feat: Добавлен Swagger для auth
